Added separate folder for extensions.

--- a/browser extension/manifest.json
+++ b/browser extension/manifest.json
@@ -16,7 +16,8 @@
           "scripts/skills.js",
           "scripts/abilities.js",
           "scripts/lightSwitch.js",
-          "scripts/tabs.js"
+          "scripts/tabs.js",
+          "scripts/eventHandlers.js"
         ]
       }
     ],
