Updated manifest and debating removing one of my script files.

--- a/browser-extension/chrome/manifest.json
+++ b/browser-extension/chrome/manifest.json
@@ -13,11 +13,10 @@
           "https://*.roll20.net/*"
         ],
         "js": [
-          "scripts/skills.js",
-          "scripts/abilities.js",
+          "scripts/nsbu.js",
+          "scripts/events.js",
           "scripts/lightSwitch.js",
-          "scripts/tabs.js",
-          "scripts/eventHandlers.js"
+          "scripts/tabs.js"
         ]
       }
     ],
