--- a/browser-extension/chrome/manifest.json
+++ b/browser-extension/chrome/manifest.json
@@ -3,12 +3,17 @@
     "description": "An extension to help with tracking stats during a Never Stop Blowing Up (NSBU) game and send messages / rolls in Roll20.",
     "version": "1.0",
     "manifest_version": 3,
-    "action": {
-      "default_popup": "nsbu.html",
-      "default_icon": "nsbu_extensions.png"
-    },
     "background": {
-          "service_worker": "scripts/background.js"
+      "service_worker": "scripts/background.js",
+      "type": "module"
+    },
+    "action": {
+      "default_title": "Click to open panel",
+      "default_icon": "nsbu_extensions.png",
+      "default_popup": "nsbu.html"
+    },
+    "side_panel": {
+      "default_path": "sidePanel.html"
     },
     "content_scripts": [
       {
@@ -18,11 +23,13 @@
         "js": [
           "scripts/nsbu.js",
           "scripts/lightSwitch.js",
-          "scripts/tabs.js"
+          "scripts/tabs.js",
+          "scripts/characterCSV.js"
         ],
         "css": [
           "styles/normalize.css",
           "styles/main.css",
+          "styles/sidePanel.css",
           "styles/light.css",
           "styles/dark.css",
           "styles/tablist.css"
@@ -34,7 +41,8 @@
       "clipboardWrite",
       "storage",
       "activeTab",
-      "scripting"
+      "scripting",
+      "sidePanel"
     ],
     "host_permissions": [
       "https://app.roll20.net/editor",
