--- a/browser-extension/chrome/manifest.json
+++ b/browser-extension/chrome/manifest.json
@@ -10,7 +10,7 @@
     "action": {
       "default_title": "Click to open panel",
       "default_icon": "nsbu_extensions.png",
-      "default_popup": "nsbu.html"
+      "default_popup": "sidePanel.html"
     },
     "side_panel": {
       "default_path": "sidePanel.html"
